# CheckInternetConnection

./: .gitignore  CheckInternetConnection.spec  README.md  cCheckInternet.py  dlgAbout.py  dlgAboutUI.py  dlgAboutUI.ui  dlgMain.py  dlgMainUI.py  dlgMainUI.ui  pyproject.toml  res.qrc  res_rc.py
