[tool.poetry]
name = "checkinternetconnection"
version = "1.0.0"
description = "Lightweght program for checking internet connection"
authors = ["alkostuchkov <alkostuchkov@gmail.com>"]
license = "GNU GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "<3.11,>=3.7"
PyQt5-stubs = "5.15.6.0"
pyinstaller = "5.0.1"
PyQt5 = "^5.15.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
